<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:orientation="vertical"
    tools:context=".EntryActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lbl_NameOfHike" />

    <EditText
        android:id="@+id/txt_NameOfHike"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:hint="@string/txtNameOfHike" />

    <TextView
        android:id="@+id/lbl_h1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Please fill the above field."
        android:visibility="invisible"
        android:textColor="#FF0000"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="Name"
        android:text="@string/lbl_Location" />

    <Spinner
        android:id="@+id/spn_Location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/lbl_h2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Please select the above field."
        android:visibility="invisible"
        android:textColor="#FF0000"
        />

    <TextView
        android:id="@+id/lbl2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Name"
        android:text="@string/lbl_ChooseDate" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/lbl_Date"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="90" />

        <Button
            android:id="@+id/btnShowDateTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="10"
            android:text="@string/btn_Date"
            app:cornerRadius="10dp" />


    </LinearLayout>
    <TextView
        android:id="@+id/lbl_h3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Please fill the above field."
        android:visibility="invisible"
        android:textColor="#FF0000"
        />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Name"
        android:text="@string/lbl_ParkingAvailable" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rdo_Yes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/txt_Yes" />

        <RadioButton
            android:id="@+id/rdo_No"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/txt_No" />
    </RadioGroup>

    <TextView
        android:id="@+id/lbl_h4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Please fill the above field."
        android:visibility="invisible"
        android:textColor="#FF0000"
        />


    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Name"
        android:text="@string/lbl_LengthOfTheHike" />

    <EditText
        android:id="@+id/txt_LengthOfHike"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="numberDecimal" />

    <TextView
        android:id="@+id/lbl_h5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Please fill the above field."
        android:visibility="invisible"
        android:textColor="#FF0000"
        />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Name"
        android:text="@string/lbl_LevelOfDifficulty" />

    <Spinner
        android:id="@+id/spn_Difficulty"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/lbl_h6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Please select the above field."
        android:visibility="invisible"
        android:textColor="#FF0000"
        />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Name"
        android:text="@string/lbl_Description" />

    <EditText
        android:id="@+id/txt_Description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine" />

    <Button
        android:id="@+id/btn_Next"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Next" />


</LinearLayout>