<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.HikeAdvanceSearchActivity"
    android:orientation="vertical">



    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lbl_NameOfHike" />

    <EditText
        android:id="@+id/txt_AdvNameOfHike"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:hint="@string/txtNameOfHike" />

    <TextView
        android:id="@+id/lbl_h1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Please fill the above field."
        android:visibility="invisible"
        android:textColor="#FF0000"
        />

     <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="Name"
        android:text="@string/lbl_Location" />

    <Spinner
        android:id="@+id/spn_AdvLocation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/lbl_h2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Please select the above field."
        android:visibility="invisible"
        android:textColor="#FF0000"
        />

    <TextView
        android:id="@+id/lbl2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Name"
        android:text="@string/lbl_ChooseDate" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/lbl_AdvDate"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="90" />

        <Button
            android:id="@+id/btnAdvShowDateTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="10"
            android:text="@string/btn_Date"
            app:cornerRadius="10dp" />


    </LinearLayout>
    <TextView
        android:id="@+id/lbl_h3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Please fill the above field."
        android:visibility="invisible"
        android:textColor="#FF0000"
        />




    ===

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Name"
        android:text="@string/lbl_LengthOfTheHike" />

    <EditText
        android:id="@+id/txt_AdvLengthOfHike"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="numberDecimal" />

    <TextView
        android:id="@+id/lbl_h5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Please fill the above field."
        android:visibility="invisible"
        android:textColor="#FF0000"
        />

    <Button
        android:id="@+id/btn_AdvSearch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Search" />

</LinearLayout>