<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HikeDetailActivity"
    android:layout_margin="20dp">

    <TextView
        android:layout_marginTop="12dp"

        android:id="@+id/lbl1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lbl_NameOfHike"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_marginTop="5dp"
        android:textSize="20sp"
        android:id="@+id/txt1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="as"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lbl1" />


    <TextView
        android:layout_marginTop="12dp"

        android:id="@+id/lbl2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lbl_Location"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt1" />

    <TextView
        android:layout_marginTop="5dp"
        android:textSize="20sp"

        android:id="@+id/txt2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="as"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lbl2" />

    <TextView
        android:layout_marginTop="12dp"

        android:id="@+id/lbl3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lbl_ChooseDate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt2" />

    <TextView
        android:layout_marginTop="5dp"
        android:textSize="20sp"

        android:id="@+id/txt3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="as"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lbl3" />

    <TextView
        android:layout_marginTop="12dp"

        android:id="@+id/lbl4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lbl_ParkingAvailable"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt3" />

    <TextView
        android:layout_marginTop="5dp"
        android:textSize="20sp"

        android:id="@+id/txt4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="as"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lbl4" />

    <TextView
        android:layout_marginTop="12dp"

        android:id="@+id/lbl5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lbl_LengthOfTheHike"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt4" />

    <TextView
        android:layout_marginTop="5dp"
        android:textSize="20sp"

        android:id="@+id/txt5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="as"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lbl5" />

    <TextView
        android:layout_marginTop="12dp"

        android:id="@+id/lbl6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lbl_LevelOfDifficulty"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt5" />

    <TextView
        android:layout_marginTop="5dp"
        android:textSize="20sp"

        android:id="@+id/txt6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="as"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lbl6" />

    <TextView
        android:layout_marginTop="12dp"

        android:id="@+id/lbl8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Weather Condition"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt6" />

    <TextView
        android:layout_marginTop="5dp"
        android:textSize="20sp"

        android:id="@+id/txt8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="as"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lbl8" />


    <TextView
        android:layout_marginTop="12dp"

        android:id="@+id/lbl7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lbl_Description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt8" />

    <TextView
        android:layout_marginTop="5dp"
        android:textSize="20sp"

        android:id="@+id/txt7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="as"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lbl7" />

    <LinearLayout
        android:layout_marginTop="20dp"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="273dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt7"
        >


        <Button
            android:id="@+id/btn_Back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_Back" />

        <Button
            android:id="@+id/btn_Save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_Save" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>